--- a/doc/article.tex
+++ b/doc/article.tex
@@ -127,7 +127,7 @@ We calculate demand for heating by taking temporal averages over a range of dura
 \subsection{Code and Data}
 
 We are committed to open science.
-Our open source code is freely available in a live repository at \url{https://github.com/jdossgollin/2021-TXtreme} and in an archived repository at TODO.
+Our open source code is freely available in a live repository at \url{https://github.com/jdossgollin/2021-TXtreme} and in an archived repository at \url{https://dx.doi.org/10.5281/zenodo.4568923}.
 Reproducibility is facilitated through the Snakemake library \cite{koster_snakemake:2012}.
 
 \section{How extreme was inferred heating demand over the Texas Interconnect?}
