--- a/doc/article.tex
+++ b/doc/article.tex
@@ -9,8 +9,21 @@
 
 \begin{document}
 
+
+\vspace*{1in}
+
+{\LARGE How unprecedented was the February 2021 Texas cold snap?}
+
+\vspace*{1in}
+
+This is a non-peer reviewed preprint submitted to EarthArXiv by James Doss-Gollin, David J. Farnham, Upmanu Lall, and Vijay Modi.
+This manuscript has been submitted to \emph{Environmental Research Letters}.
+If accepted, a link to the published DOI will be provided here.
+
+\clearpage
+
 %\title[PREPRINT: Doss-Gollin, Farnham, Lall, and Modi]{How unprecedented was the February 2021 Texas cold snap?}
-\title{How unprecedented was the February 2021 Texas cold snap?}
+\title[PREPRINT by Doss-Gollin, Farnham, Modi, and Lall]{How unprecedented was the February 2021 Texas cold snap?}
 
 \author{James Doss-Gollin$^1$, David J. Farnham$^2$, Upmanu Lall,$^{3,4}$ and Vijay Modi$^5$}
 \address{$^1$ Department of Civil and Environmental Engineering, Rice University, Houston, TX, USA (ORCID 0000-0002-3428-2224)}
