--- a/doc/article.tex
+++ b/doc/article.tex
@@ -16,9 +16,9 @@
 
 \vspace*{1in}
 
-This is a non-peer reviewed preprint submitted to EarthArXiv by James Doss-Gollin, David J. Farnham, Upmanu Lall, and Vijay Modi.
-This manuscript has been submitted to \emph{Environmental Research Letters}.
-If accepted, a link to the published DOI will be provided here.
+This is a non-peer reviewed manuscript by James Doss-Gollin, David J. Farnham, Upmanu Lall, and Vijay Modi.
+You can find a permanent and updated preprint on EarthArXiV at \url{https://doi.org/10.31223/X5003J}.
+This manuscript is still under review; if accepted we will provide a link to the published article here.
 
 \clearpage
 
