--- a/doc/submission_01.tex
+++ b/doc/submission_01.tex
@@ -9,21 +9,7 @@
 
 \begin{document}
 
-
-\vspace*{1in}
-
-{\LARGE How unprecedented was the February 2021 Texas cold snap?}
-
-\vspace*{1in}
-
-This is a non-peer reviewed manuscript by James Doss-Gollin, David J. Farnham, Upmanu Lall, and Vijay Modi.
-You can find a permanent and updated preprint on EarthArXiV at \url{https://doi.org/10.31223/X5003J}.
-This manuscript is still under review; if accepted we will provide a link to the published article here.
-
-\clearpage
-
-%\title[PREPRINT: Doss-Gollin, Farnham, Lall, and Modi]{How unprecedented was the February 2021 Texas cold snap?}
-\title[PREPRINT by Doss-Gollin, Farnham, Modi, and Lall]{How unprecedented was the February 2021 Texas cold snap?}
+\title{How unprecedented was the February 2021 Texas cold snap?}
 
 \author{James Doss-Gollin$^1$, David J. Farnham$^2$, Upmanu Lall,$^{3,4}$ and Vijay Modi$^5$}
 \address{$^1$ Department of Civil and Environmental Engineering, Rice University, Houston, TX, USA (ORCID 0000-0002-3428-2224)}
